[package]
name = "cv_js"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
cv_asm = { path = "../cv_asm" }
cv_wasm = { path = "../cv_wasm" }
cv_compression = { path = "../cv_compression" }