[package]
name = "cv_net"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
cv_base = { path = "../cv_base" }
cv_url = { path = "../cv_url" }
cv_crypto = { path = "../cv_crypto" }
cv_compression = { path = "../cv_compression" }
